# clipnest

./: .gitignore  CHANGELOG.md  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: KNOWN_ISSUES.md  MIGRATION.md  TESTING.md  plan-v1.1.md  tauri-window-plan.md
docs/specs/: v1.1-screen-ocr.md
scripts/: tauri.ps1
scripts/ocr_host/: ClipNest.OcrHost.csproj  Program.cs  probe_rapidocr.py
src/: App.tsx  index.css  mockAI.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: inspect_db.rs  test_backup.rs  test_dedup.rs  test_e2e.rs  test_search.rs
src-tauri/resources/rapidocr/: rcr_ocr.py
src-tauri/src/: ai.rs  clipboard.rs  commands.rs  database.rs  hotkeys.rs  lib.rs  main.rs  paste.rs  search.rs  settings.rs  tags.rs  tray.rs
src-tauri/src/ocr/: mod.rs  rapidocr.rs  wechat.rs
src/app/: App.tsx
src/components/: ContentCard.tsx  ContentList.tsx  DetailPanel.tsx  ImagePreview.tsx  NumberField.tsx  SavePopup.tsx  SearchPanel.tsx  Sidebar.tsx  SnippetCard.tsx  typeMeta.ts  ui.tsx
src/hooks/: useInViewport.ts  useKeyboardNavigation.ts  useSettings.ts  useSnippets.ts  useToast.ts
src/lib/: analyze.ts  api.ts  format.ts  mappers.ts  utils.ts
src/windows/: CaptureWindow.tsx  ScreenOcrWindow.tsx  SearchWindow.tsx  SettingsWindow.tsx
