[package]
name = "copyliusq"
version = "1.0.0"
description = "Personal Knowledge Capture System"
authors = ["copyliusq"]
edition = "2021"

[lib]
name = "copyliusq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
pinyin = "0.11"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
tauri-plugin-single-instance = "2"
